--- a/app/views/blogs/blog_01.html.erb
+++ b/app/views/blogs/blog_01.html.erb
@@ -8,6 +8,10 @@
         <div class="detitle for_blog">
           <h2><span>All About The Amazon Prime</span></h2>
           <p><a target="_blank" href="https://amzn.to/2NIxZLC"><span class="prime">Amazon Prime</span></a> is a paid subscription service($119 per year currently, plus a <a target="_blank" href="https://amzn.to/2NIxZLC"><span class="prime">free 30-day trial</span></a> or $12.99 per month) offered by Amazon that gives users access to free two-day delivery (one-day in some areas), streaming video and music, and other benefits for a monthly or yearly fee.</p>
+          <div class="trial">
+            <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
+            <!-- <a target="_blank" href="/blogs/blog_02">How to sign up & Cancel</a> -->
+          </div>
         </div>
         
         <div class="blog_wrap clearfix">
@@ -122,6 +126,13 @@
            </div>
 
         </div><!--./blog_wrap-->
+
+        <div class="detitle for_blog">
+          <div class="trial">
+            <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
+            <!-- <a target="_blank" href="/blogs/blog_02">How to sign up & Cancel</a> -->
+          </div>
+        </div>
       </div><!--./wrap-->
     </div><!--./cu_wrap-->
 </div><!--./layout-->
