--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,312 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="40" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZOPUpM"><img src="https://images-na.ssl-images-amazon.com/images/I/31UaR2-zDvL.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZOPUpM">Surface Pen Microsoft Certified, Aluminium Body 4096 Pressure Sensitivity</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $49.99</strong> using code:40SURFACE</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ZOPUpM">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LqpmIm"><img src="https://m.media-amazon.com/images/I/71TMchc5YPL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LqpmIm">Bike Tail Light, Ultra Bright USB Rechargeable, Bicycle Flashing Rear taillight, LED Safety Warning Strobe Head Light</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>65% off at $13.99</strong> using code:651ISWDH</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LoeECh"><img src="https://m.media-amazon.com/images/I/71oayjZHkmL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LoeECh">Gourmet Hot Sauce Variety Pack -ALL SPICE CAFÉ - 1 Bottle of each flavor: Chipotle Garlic, Cayenne Habanero, & Caribbean Spice</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>25% off at $19.99</strong> using code:25HOTSAUCE</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LoeECh">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="64.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H2VsEO"><img src="https://m.media-amazon.com/images/I/71-UhR3ReWL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H2VsEO">EDODAY Casual Backpack,Daypack Backpack for Women Men Colleage High School...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $64.99</strong> using code:80CNALWO</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H2VsEO">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="44.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LpwR2b"><img src="https://m.media-amazon.com/images/I/510HT+th1CL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LpwR2b">BISON DENIM 15.6 Inch Laptop Backpack, Anti Theft Travel Backpack</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>65% off at $44.99</strong> using code:65KK3ABJ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LpwR2b">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DLia3e"><img src="https://m.media-amazon.com/images/I/71menFcbtEL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DLia3e">OICEPACK Ice Packs For Lunch Box Blue,Coolers Reusable Ice Pack,Freezer Ice Packs For Coolers</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $16.99</strong> using code:50JJT1BK</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DLia3e">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="189.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZZCMy2"><img src="https://m.media-amazon.com/images/I/71olAm-ahzL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZZCMy2">Wifi Security Camera System 4CH 960P Indoor/Outoodr Wirelss Security Camera System With 1TB HDD,Home Security Camera System...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $189.99</strong> using code:15YFBCUN</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ZZCMy2">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="10.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LmTJj2"><img src="https://m.media-amazon.com/images/I/71R0hzOlyRL._SR400,400_.jpg" alt="4K HDMI Switch Splitter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LmTJj2">AIBOCN 4K HDMI Switch Splitter, 2 Ports Bi-Direction Manual Switch Supports 4K 3D HD 1080P for...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>55% off at $10.99</strong> using code:55X3JX1K</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LmTJj2">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="58" data-price="19.57">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DPOMJ4"><img src="https://images-na.ssl-images-amazon.com/images/I/41Vzi5wb2IL.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DPOMJ4">Face & Neck Firming Cream - Top Influencer - Organic & Vegan - Helps With Anti-Wrinkle & Firming Skin Packed with...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>58% off at $19.57</strong> using code:58IDA88G</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DPOMJ4">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JgchP9"><img src="https://m.media-amazon.com/images/I/61L0EsFKutL._SR400,400_.jpg" alt="Wireless Keyboard and Mouse" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JgchP9">FENIFOX Wireless Keyboard and Mouse, 2.4G USB Small Mini Thin Whisper-Quiet for Laptop Tablet Notebook PC</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $24.99</strong> using code:509OYIVS</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JgchP9">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="23.11">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DPzrIF"><img src="https://m.media-amazon.com/images/I/61wpviminlL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DPzrIF">Laptop Backpack, Business Durable Laptops Backpack, Water Resistant College School Computer Bag for Women & Men </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $23.11</strong> using code:45RHKKU6</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DPzrIF">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="62.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PObN43"><img src="https://m.media-amazon.com/images/I/61uJFayGlWL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PObN43">Briefcases for Men,15.6 inch Laptop Bag,Work Business Travel Computer Bag with Multi Pockets for ...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $62.99</strong> using code:60KKP5O3</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PObN43">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DPCEYD"><img src="https://m.media-amazon.com/images/I/61bywBnweML._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DPCEYD">CIOR Kids Water Shoes Quick-Dry Boys and Girls Slip-on Aqua Beach Sneakers </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $19.99</strong> using code:30GLD3WN</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DPCEYD">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H1IPLa"><img src="https://m.media-amazon.com/images/I/51KEQe969HL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H1IPLa">Bluetooth Separable Soundbar with Built-in Subwoofer Dustproof Wireless Surround Sound System for PC, Tablet, TV, Smart Phone...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $109.99</strong> using code:20EHXPNV</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H1IPLa">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="48" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JeXkwQ"><img src="https://m.media-amazon.com/images/I/71kOxJp7OWL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>48% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JeXkwQ">NANW Clip on Stroller Fan Battery Operated, Portable 40 Hours Desk Fan with Rechargeable 4400mAH Battery...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>48% off at $24.99</strong> using code:48GUNW83</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JeXkwQ">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZVu2Jt"><img src="https://m.media-amazon.com/images/I/61MmmesU4hL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZVu2Jt">Home Security Door Lock, 2 Pack Front Door Locks for Kids, Home Reinforcement Lock for Swing-in Doors</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $16.99</strong> using code:157TWMTA</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ZVu2Jt">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="18.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DPBPPD"><img src="https://m.media-amazon.com/images/I/71iN+80I1zL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DPBPPD">MAANGE Eye Enhancing Kit, 14 Colors Eyeshadow Palette with Matte and Shimmer, Eyeliner Pen...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $18.99</strong> using code:50JZE4GQ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DPBPPD">Copy & Use code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="9.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Y7sQRE"><img src="https://m.media-amazon.com/images/I/71O25WGXuBL._SR400,400_.jpg" alt="Shower Speaker" /></a>
