--- a/app/views/promocodes_days/_day_07.html.erb
+++ b/app/views/promocodes_days/_day_07.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2PMFFhm">True Wireless Earbuds Bluetooth 5.0 DULLA Sweatproof TWS Deep Bass Earphones Noise Cancelling Isolating Headsets with...</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $36.99</strong> using code:20T5PLZ1</span></p>
@@ -22,7 +22,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2PMD2vR">Bluetooth Headphones DULLA True Wireless Noise Cancelling Earphones Sweatproof Waterproof with Microphone Earbuds</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $42.89</strong> using code:20O6ZLPV</span></p>
@@ -40,7 +40,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>15% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2PJtlOI">EOUER HD Stereo Gaming Headset with Noise Cancelling Mic,HiFi Wired Over Ear Headphones for PS4, Xbox One,Surround Sound Computer Headset with LED Light</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $24.99</strong> using code:15Y9QH7H</span></p>
@@ -58,7 +58,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>65% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2H0TBAm">CAILLU cord headphone organizer cable ties,Fox earbud case Tiny leather gadget,earphone case headset wrap winder handmade</a></p>
     <div class="code_high">
       <p><span>Take <strong>65% off at $9.99</strong> using code:65CAILLU03WY</span></p>
@@ -76,7 +76,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>15% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Y6oWbI">CHENGDAO Switch Wireless Controller Compatible Nintendo Switch Pro Controller Console,PS3,Windows PC(XP/7/8/10) - Yellow</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $28.99</strong> using code:156QPW2A</span></p>
@@ -94,7 +94,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2UXsY4e">Portabl Wireless Bluetooth-Speaker,Bookshelf Round Blue Tooth Speakers with Fabric Surface,HiFi Sound Quality,Built - in Imported Bluetooth 4.1, Built-in Mic...</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $29.99</strong> using code:50NFPNBU</span></p>
@@ -112,7 +112,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2H159EN">iMah Smart Outlet Plug, WiFi Smart Plug with Night Light work with Alexa Google Assistant IFTTT Brightness Adjustable</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $26.99</strong> using code:50T68DTB</span></p>
@@ -147,7 +147,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>35% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Y4b7dI">FELiCON Gaming Headset for PS4 Xbox One PC Professional 50mm Driver 3.5mm Surround Stereo Game Headphones with Noise Cancelling Mic & Volume Control ...</a></p>
     <div class="code_high">
       <p><span>Take <strong>35% off at $28.99</strong> using code:35IWM2ZU</span></p>
@@ -165,7 +165,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LgKqkq">Zicac Casual Daypacks Laptop Backpack Travel Backpack for Man and Women Water-Repellent Nylon with USB Charging Port </a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $35.99</strong> using code:50JL2YR6</span></p>
@@ -183,7 +183,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2ZTEwsR">USB C HUB, ICZI Type C Hub with 4K HDMI Port, 3 USB 3.0 Ports, SD + MicroSD Card Reader, Type C Port Support Power Delivery for ...</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $31.99</strong> using code:50P4OJF9</span></p>
@@ -201,7 +201,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2UYrOW3">7 inch Tablet with WiFi, 7" HD Display with Eye Protection Screen, 1G/8G, ZONKO Android 8.0 Quad Core 1024x600 Dual Camera...</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $56.99</strong> using code:2073P4UW</span></p>
@@ -219,7 +219,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>15% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GYM3yY">10.1 Inch Tablet, Dual Sim Card Slots for Phone Call, 3G/WiFi, Quad Core CPU, Bluetooth, GPS, 2GB RAM 16GB Storage, Android 6.0...</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $77.99</strong> using code:15Z1LUB6</span></p>
@@ -237,7 +237,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VDuUTR">Takyu Mobile Game Controller 4000mAh for iPhone, PUBG iOS & Android Mobile Gaming Trigger Joystick with</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $18.99</strong> using code:50L1B9D2</span></p>
@@ -255,7 +255,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>58% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DLsS9T">Adjustable Cell Phone Stand, Oternal Tablet Stand Desktop Stand Holder, Compatible with ...</a></p>
     <div class="code_high">
       <p><span>Take <strong>58% off at $12.99</strong> using code:58L4MA2Y</span></p>
@@ -273,7 +273,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>70% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2PJHwU0">Galaxy S7 Case,ATOOZ(TM) 360 Degree All-Round Full Body Slim Ultra Thin Lightweight Hard Protective Case Cover 5.1" for Samsung Galaxy S7</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $15.98</strong> using code:70CGUZWD</span></p>
@@ -291,7 +291,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>80% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Y0m2F6">Bluetooth Headphones,Wireless Headphones,Waterproof in-Ear Wireless Charging Case Built-in Mic Headset Premium Sound with</a></p>
     <div class="code_high">
       <p><span>Take <strong>80% off at $59.99</strong> using code:80NYT41U</span></p>
@@ -309,7 +309,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>45% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JjJ05Y">Wireless Car Charger Mount, Hands-Free Fast Wireless Charging Air Vent Car Phone Mount Dashboard Phone Holder Compatible for...</a></p>
     <div class="code_high">
       <p><span>Take <strong>45% off at $49.99</strong> using code:4513CG76</span></p>
@@ -327,7 +327,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>62% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2H1WKAX">NANFU Fast Wireless Charger, Qi Wireless 7.5W Fast Charging Stand with Cooling Fan Compatible for iPhone XR/XS/XS Max/X/8/8P,10W Charges...</a></p>
     <div class="code_high">
       <p><span>Take <strong>62% off at $25.99</strong> using code:62U9S5JL</span></p>
@@ -345,7 +345,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>51% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Y7R3HA">NANFU Wireless Charger, Convenient and Safe, 7.5W Charges Compatible for/with iPhone XR/XS/XS Max/X/8/8P,10W Charges for ...</a></p>
     <div class="code_high">
       <p><span>Take <strong>51% off at $19.99</strong> using code:512DOKF9</span></p>
@@ -363,7 +363,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>70% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2PJAChq">Wireless Car Charger,Steanum Car Fast Wireless Charger Car Mount Air Vent Phone Holder Compatible for...</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $29.98</strong> using code:70HANUAC</span></p>
@@ -381,7 +381,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DM5eu7">15W Wireless Charger,Glamore Qi-Certified Wireless Charging Pad</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $17.99</strong> using code:30CABNDC</span></p>
@@ -399,7 +399,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DMv2WS">Car Mount, Glamore Car Phone Mount Car Phone Holder for Car Magnetic Mount, Magnetic Phone Car Mount for...</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $9.69</strong> using code:30E84YDY</span></p>
@@ -417,7 +417,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DJsvN6">Portable Charger, Hydesen High Capacity Power Bank, 10000mAh External Battery Pack...</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $27.99</strong> using code:506XQMK8</span></p>
@@ -435,7 +435,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2PMLjjy">Radioddity x Baofeng RD-5R Dual Band Dual Time Slot DMR, VHF/UHF1024 Channels FM Radio Rechargeable Long Range Walkie Talkies...</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $79.99</strong> using code:30RNMWVX</span></p>
@@ -453,7 +453,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>60% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GYS3YG">USB Car Charger, Yoobao 3.4A Metal Dual USB Car Phone Adapter Compatible iPhone X/ 8/7/ 6s Plus, iPad Pro/Air 2/Mini, Galaxy S8/ S7...</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $11.99</strong> using code:60C8S2TL</span></p>
@@ -471,7 +471,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2PLSPuJ">HonkTai Soft-TPU Plating Case, Clear Back, Phone Case Compatible iPhone 7/8</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $12.99</strong> using code:507NKIRK</span></p>
@@ -489,7 +489,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>60% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Y0oCuM">DYNASCO Fanny Pack Workout Men Water Resistant Waist Bags for Women Large Capacity Bum Bag Running Hiking Runners Belt for...</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $13.79</strong> using code:60LJEI2Y</span></p>
@@ -507,7 +507,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>80% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GYSLVQ">Lovinland Bamboo Stool, 70 x 28 x 45.5cm Chair Anti-Slip Lightweight Step Stool Seat</a></p>
     <div class="code_high">
       <p><span>Take <strong>80% off at $169.95</strong> using code:80GSNG9R</span></p>
@@ -525,7 +525,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2V9Shoq">Selfie Ring Light, Oternal Rechargeable Portable Clip-on Selfie Fill Light with 36 LED for...</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $10.99</strong> using code:507QT359</span></p>
