--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -102,7 +102,6 @@
 /* Section Coupons */
 @media screen and (min-width:640px){
   .coupons{}
-  
   /*.coupons .lt_cnt .lt_cnt_box{display:none;}
   .coupons .lt_cnt .lt_cnt_box.on{display:block;position:fixed;top:80px;width:270px;}
   .coupons .lt_cnt .lt_cnt_box.on button{margin-right:8px;border:0;padding:8px;border-radius:10px;display:inline-block;font-size:17px;}
@@ -112,21 +111,27 @@
   .coupons .rt_cnt .cnt_box button:hover{border-bottom:1px solid;color:#000;}
   
   .coupons .coupons_wrap{margin:20px 0 0 0;}
-  .coupons .coupons_wrap .coupons_highlight{border:3px solid;margin-bottom:15px;}
-  .coupons .coupons_wrap .coupons_highlight .card{border-bottom:none;margin:0;}
-  .coupons .coupons_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
-  .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:left;width:18%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
-  .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
-  .coupons .coupons_wrap .card .info_box p{font-size:30px;font-weight:bold;line-height:1.2;margin:3px 20px;}
+  /*.coupons .coupons_wrap .coupons_highlight{border:3px solid;margin-bottom:15px;}
+  .coupons .coupons_wrap .coupons_highlight .card{border-bottom:none;margin:0;}*/
+  .coupons .coupons_wrap .card{border-bottom:1px solid #ccc;padding-bottom:10px;}
+  .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:left;width:26%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
+  .coupons .coupons_wrap .card .img_box{float: left;width: 20%;height: 167px;padding: 1.5%;}
+  .coupons .coupons_wrap .card .img_box img{width:100%;height:100%;object-fit:contain;}
+  .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;display:block;}
+  .coupons .coupons_wrap .card .info_box p{font-size:70px;font-weight:bold;line-height:1.2;margin:3px 20px;}
   .coupons .coupons_wrap .card .info_box em{}
-  .coupons .coupons_wrap .card .info_box .img_box{height:100px;padding:0;}
-  .coupons .coupons_wrap .card .info_box img{width:100%;height:100%;object-fit:contain;}
-  .coupons .coupons_wrap .card .info_box strong{background:#000;color:#fff;border-radius:10px;padding:0 10px;display:block;width:50%;margin:5px auto;}
   .coupons .coupons_wrap .card .inner{float:left;width:57%;padding:1.5%;font-family: 'Montserrat', sans-serif;font-weight:400;}
-  .coupons .coupons_wrap .card .inner p{font-size:17px;font-weight:bold;line-height:1.2;margin-top:5px;}
-  .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#000;}
-  .coupons .coupons_wrap .card .inner em{display:block;margin:7px 0;font-size:13px;}
-  .coupons .coupons_wrap .card .inner em>a{text-decoration:none;color:#08f;}
+  .coupons .coupons_wrap .card .inner .regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
+  .coupons .coupons_wrap .card .inner .regular em{background:#000;padding:0 5px;color:#fff;}
+  .coupons .coupons_wrap .card .inner .shipping_condition{display:block;font-size:12px;}
+  .coupons .coupons_wrap .card .inner .shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
+  .coupons .coupons_wrap .card .inner .dis_price{font-size:20px;font-weight:bold;margin-right:7px;}
+  .coupons .coupons_wrap .card .inner .org_price{color:#616161;text-decoration:line-through;}
+  .coupons .coupons_wrap .card .inner strong{display:block;}
+  .coupons .coupons_wrap .card .inner h3{font-weight:bold;line-height:1.2;margin-top:5px;}
+  .coupons .coupons_wrap .card .inner h3>a{text-decoration:none;color:#000;font-size:17px;}
+  .coupons .coupons_wrap .card .inner p{margin:10px 0;line-height:1.2;height:4.8em;overflow:hidden;}
+  .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#616161;}
   .coupons .coupons_wrap .card .inner span{}
   .coupons .coupons_wrap .card .deal_btn{border-left:1px solid #ccc;float:left;width:15%;padding:1%;text-align:center;margin:50px 0;}
   .coupons .coupons_wrap .card .deal_btn a{text-decoration:none;color:#000;border:1px solid;padding:10px 17px;}
@@ -135,32 +140,39 @@
 @media screen and (max-width:640px){
   .coupons .rt_cnt .cnt_box{margin:20px 0;}
   .coupons .rt_cnt .cnt_box.on{display:none;}
-  .coupons .rt_cnt .cnt_box #buttons button{border:0;padding:8px;border-radius:3px;display:inline-block;font-size:15px;width:33.33%;}
+  .coupons .rt_cnt .cnt_box #buttons button{border:0;padding:8px;border-radius:3px;display:inline-block;font-size:13px;width:25%;}
   .coupons .rt_cnt .cnt_box #buttons button.active{background:#000;color:#fff;}
   .coupons .rt_cnt .cnt_box button:hover{border-bottom:1px solid;color:#000;}
   /*.coupons .coupons_wrap{column-width:170px;column-gap:5px;}*/
-  .coupons .coupons_wrap .card{border-radius:5px;display:inline-block;margin:0;margin-bottom:15px;padding:5px;box-shadow: 1px 1px 3px rgba(0,0,0,0.5);}
-  .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:left;width:30%;padding:10px 5%;text-align:center;background:#fff;color:#000;}
-  .coupons .coupons_wrap .card .info_box p{font-size:25px;font-weight:500;line-height:1.2;}
-  .coupons .coupons_wrap .card .inner{font-family: 'Montserrat', sans-serif;font-weight:400;}
-  .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#000;}
+  .coupons .coupons_wrap .card{border-radius:5px;display:inline-block;margin:0;margin-bottom:15px;padding:15px;box-shadow: 1px 1px 3px rgba(0,0,0,0.5);}
+  .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:none;width:100%;padding:10px 5%;text-align:center;background:#fff;color:#000;}
+  .coupons .coupons_wrap .card .info_box p{font-size:70px;font-weight:500;line-height:1;}
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .info_box .img_box{height:auto;padding:0;}
   .coupons .coupons_wrap .card .info_box img{width:100%;height:auto;}
   .coupons .coupons_wrap .card .info_box strong{background:#000;color:#fff;border-radius:10px;padding:0 10px;display:block;margin:5px auto;}
-  .coupons .coupons_wrap .card .inner{float:left;width:69.5%;padding:0;}
-  .coupons .coupons_wrap .card .inner p{font-weight:600;font-size:15px;line-height:1.2;margin-top:10px;word-break:break-all;border-bottom:1px solid #ddd;padding-bottom:5px;}
-  .coupons .coupons_wrap .card .inner em{display:block;margin:10px 0;}
-  .coupons .coupons_wrap .card .inner span{font-size:11px;color:#ddd;border-bottom:1px solid #ddd;padding-bottom:3px;display:block;}
-  .coupons .coupons_wrap .card .deal_btn{float:right;padding:0;margin:10px 0;}
-  .coupons .coupons_wrap .card .deal_btn a{text-decoration:none;color:#000;border:1px solid;padding:5px 17px;}
+  .coupons .coupons_wrap .card .inner{float:none;width:100%;padding:0;font-family: 'Montserrat', sans-serif;font-weight:400;}
+  .coupons .coupons_wrap .card .inner h3>a{text-decoration:none;color:#000;}
+  .coupons .coupons_wrap .card .inner .regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
+  .coupons .coupons_wrap .card .inner .regular em{background:#000;padding:0 5px;color:#fff;}
+  .coupons .coupons_wrap .card .inner .shipping_condition{display:block;font-size:12px;}
+  .coupons .coupons_wrap .card .inner .shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
+  .coupons .coupons_wrap .card .inner .dis_price{font-size:20px;font-weight:bold;margin-right:7px;}
+  .coupons .coupons_wrap .card .inner .org_price{color:#616161;text-decoration:line-through;}
+  .coupons .coupons_wrap .card .inner p{color:#616161;font-size:15px;line-height:1.2;margin-top:10px;/*word-break:break-all;*/border-bottom:1px solid #ddd;padding-bottom:5px;}
+  .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#616161;}
+  .coupons .coupons_wrap .card .inner em{margin:10px 0;}
+  .coupons .coupons_wrap .card .inner span{}
+  .coupons .coupons_wrap .card .deal_btn{float:left;margin:10px 0;}
+  .coupons .coupons_wrap .card .deal_btn a{text-decoration:none;color:#000;border:1px solid;padding:10px 20px;display:block;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
   .coupons .rt_cnt .cnt_box.on{display:none;}
   .coupons .coupons_wrap .card .info_box{width:23%;}
-  .coupons .coupons_wrap .card .info_box p{font-size:25px;padding:10px 0;}
+  .coupons .coupons_wrap .card .info_box p{font-size:55px;padding:10px 0;}
+  .coupons .coupons_wrap .card .info_box .img_box{width:165px;}
   .coupons .coupons_wrap .card .deal_btn{width:18%;}
   .coupons .coupons_wrap .card .deal_btn a{padding:5px 10px;}
 }
