--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -119,6 +119,8 @@
 .cu_wrap .detitle h2{font-size:30px;display:inline;border-bottom:0.4em solid rgba(0,168,225,0.2);position:relative;}
 .cu_wrap .detitle h2 span{position:relative;top:0.4em;}
 .cu_wrap .detitle p{color:#616161;width:85%;margin:20px auto;font-family: 'Montserrat', sans-serif;}
+.cu_wrap .detitle .trial{}
+.cu_wrap .detitle .trial a{background:#08f;color:#fff;padding:10px;}
 .cu_wrap .detitle .admin a{text-decoration:none;color:#3d3d3d;margin-left:15px;}
 .cu_wrap .cu_box{margin:50px 0;border-bottom:1px solid #ccc;padding-bottom:50px;}
 .cu_wrap .num{float:left;width:200px;text-align:center;}
